Filedata - изменила классы для обработки файла (Buffered/FileReader --> Path+Files), переопределила добавление ноды в файл и рабочую базу. App - вызовы и to-do комментарий